<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="take_photo">Take photo</string>
    <string name="start_capture">Start capture</string>

    <string name="capture_front_side">Capture front side</string>
    <string name="recapture_front_side">Recapture front side</string>
    <string name="next">Next</string>
    <string name="recapture_back_side">Recapture back side</string>
    <string name="capture_back_side">Capture back side</string>
    <string name="take_a_clear_picture_of_the_front_side_of_you_id_card">Step 1:\nTake a clear picture of the front side of you ID card</string>
    <string name="step_2_take_a_clear_picture_of_the_back_side_of_you_id_card">Step 2:\nTake a clear picture of the back side of you ID card</string>
    <string name="top">TOP</string>
    <string name="bottom">BOTTOM</string>
    <string name="right">Right</string>
    <string name="left">LEFT</string>

    <string name="step_3_nrecord_a_video_of_your_id_card_while_moving_your_phone">Step 3:\nRecord a video of your id card while moving your phone</string>
    <string name="do_you_want_to_proceed_with_this_video_or_recapture">Do you want to proceed with this video or recapture?</string>
    <string name="start_recording_video">Start recording video</string>
    <string name="re_record_video">re record video</string>
    <string name="do_you_want_to_proceed_with_this_picture_or_recapture">Do you want to proceed with this picture or recapture?</string>


</resources>