<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <TextView
        android:id="@+id/frontSideImageTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/take_a_clear_picture_of_the_front_side_of_you_id_card"
        android:textAppearance="@style/TextAppearance.Subtitle1.Bold"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintBottom_toTopOf="@id/cameraView"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.otaliastudios.cameraview.CameraView
        android:id="@+id/cameraView"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="@dimen/_350sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <ImageView
        android:id="@+id/frontSideImageView"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_350sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />
    <View
        android:id="@+id/topRight"
        android:layout_width="75dp"
        android:layout_height="10dp"
        android:layout_margin="15dp"
        android:background="@drawable/corners"
        app:layout_constraintRight_toRightOf="@id/cameraView"
        app:layout_constraintTop_toTopOf="@id/cameraView" />

    <View
        android:id="@+id/topRight2"
        android:layout_width="10dp"
        android:layout_height="75dp"
        android:background="@drawable/corners"
        app:layout_constraintRight_toRightOf="@id/topRight"
        app:layout_constraintTop_toTopOf="@id/topRight" />

    <View
        android:id="@+id/topLeft"
        android:layout_width="75dp"
        android:layout_height="10dp"
        android:layout_margin="15dp"
        android:background="@drawable/corners"
        app:layout_constraintLeft_toLeftOf="@id/cameraView"
        app:layout_constraintTop_toTopOf="@id/cameraView" />

    <View
        android:id="@+id/topLeft2"
        android:layout_width="10dp"
        android:layout_height="75dp"
        android:background="@drawable/corners"
        app:layout_constraintLeft_toLeftOf="@id/topLeft"
        app:layout_constraintTop_toTopOf="@id/topLeft" />

    <View
        android:id="@+id/bottomRight"
        android:layout_width="75dp"
        android:layout_height="10dp"
        android:layout_margin="15dp"
        android:background="@drawable/corners"
        app:layout_constraintBottom_toBottomOf="@id/cameraView"
        app:layout_constraintRight_toRightOf="@id/cameraView" />


    <View
        android:id="@+id/bottomRight2"
        android:layout_width="10dp"
        android:layout_height="75dp"
        android:background="@drawable/corners"
        app:layout_constraintBottom_toBottomOf="@id/bottomRight"
        app:layout_constraintRight_toRightOf="@id/bottomRight" />

    <View
        android:id="@+id/bottomLeft"
        android:layout_width="75dp"
        android:layout_height="10dp"
        android:layout_margin="15dp"
        android:background="@drawable/corners"
        app:layout_constraintBottom_toBottomOf="@id/cameraView"
        app:layout_constraintLeft_toLeftOf="@id/cameraView" />


    <View
        android:id="@+id/bottomLeft2"
        android:layout_width="10dp"
        android:layout_height="75dp"
        android:background="@drawable/corners"
        app:layout_constraintBottom_toBottomOf="@id/bottomLeft"
        app:layout_constraintLeft_toLeftOf="@id/bottomLeft" />



    <Button
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="50dp"
        android:elevation="2dp"
        android:text="@string/take_photo"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vertical_centerline" />

    <Button
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="50dp"
        android:elevation="2dp"
        android:text="@string/start_capture"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/vertical_centerline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_centerline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50" />

    <Button
        android:id="@+id/captureFrontSideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture_front_side"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="@dimen/_10sdp"
        />

    <Button
        android:id="@+id/recaptureFrontSideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/recapture_front_side"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/proceedToBackSideButton" />

    <Button
        android:id="@+id/proceedToBackSideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/recaptureFrontSideButton"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/cameraGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="cameraView, topRight, topRight2, topLeft, topLeft2, bottomRight, bottomRight2, bottomLeft, bottomLeft2"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/frontSideImageGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="frontSideImageView, recaptureFrontSideButton, proceedToBackSideButton" />



    <ImageView
        android:id="@+id/backSideImageView"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_350sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/captureBackSideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture_back_side"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/recaptureBackSideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/recapture_back_side"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/proceedToVideoButton" />

    <Button
        android:id="@+id/proceedToVideoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/green"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/recaptureBackSideButton"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="backSideImageView, recaptureBackSideButton, proceedToVideoButton" />

    <TextView
        android:id="@+id/backSideImageTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/step_2_take_a_clear_picture_of_the_back_side_of_you_id_card"
        android:textAppearance="@style/TextAppearance.Subtitle1.Bold"
        android:textSize="@dimen/_15ssp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/cameraView"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="cameraView, topRight, topRight2, topLeft, topLeft2, bottomRight, bottomRight2, bottomLeft, bottomLeft2"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:text="@string/top"
        android:textAppearance="@style/TextAppearance.Subtitle2.Bold"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/cameraView"
        app:layout_constraintLeft_toRightOf="@id/cameraView"
        app:layout_constraintTop_toTopOf="@id/cameraView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:text="@string/bottom"
        android:textAppearance="@style/TextAppearance.Subtitle2.Bold"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/cameraView"
        app:layout_constraintRight_toLeftOf="@id/cameraView"
        app:layout_constraintTop_toTopOf="@id/cameraView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:text="@string/right"
        android:textAppearance="@style/TextAppearance.Subtitle2.Bold"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@id/cameraView"
        app:layout_constraintRight_toRightOf="@id/cameraView"
        app:layout_constraintTop_toBottomOf="@id/cameraView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:text="@string/left"
        android:textAppearance="@style/TextAppearance.Subtitle2.Bold"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/cameraView"
        app:layout_constraintLeft_toLeftOf="@id/cameraView"
        app:layout_constraintRight_toRightOf="@id/cameraView" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/backSideImageGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="backSideImageView, recaptureBackSideButton, proceedToVideoButton" />


    <TextView
        android:id="@+id/imageTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/do_you_want_to_proceed_with_this_picture_or_recapture"
        android:textAppearance="@style/TextAppearance.Subtitle1.Bold"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/frontSideImageView"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>