<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.otaliastudios.cameraview.CameraView
        android:id="@+id/cameraView"
        android:layout_width="300dp"
        android:layout_height="478dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/topRight"
        android:layout_width="75dp"
        android:layout_height="10dp"
        android:layout_margin="15dp"
        android:background="@drawable/corners"
        app:layout_constraintRight_toRightOf="@id/cameraView"
        app:layout_constraintTop_toTopOf="@id/cameraView" />

    <View
        android:id="@+id/topRight2"
        android:layout_width="10dp"
        android:layout_height="75dp"
        android:background="@drawable/corners"
        app:layout_constraintRight_toRightOf="@id/topRight"
        app:layout_constraintTop_toTopOf="@id/topRight" />

    <View
        android:id="@+id/topLeft"
        android:layout_width="75dp"
        android:layout_height="10dp"
        android:layout_margin="15dp"
        android:background="@drawable/corners"
        app:layout_constraintLeft_toLeftOf="@id/cameraView"
        app:layout_constraintTop_toTopOf="@id/cameraView" />

    <View
        android:id="@+id/topLeft2"
        android:layout_width="10dp"
        android:layout_height="75dp"
        android:background="@drawable/corners"
        app:layout_constraintLeft_toLeftOf="@id/topLeft"
        app:layout_constraintTop_toTopOf="@id/topLeft" />

    <View
        android:id="@+id/bottomRight"
        android:layout_width="75dp"
        android:layout_height="10dp"
        android:layout_margin="15dp"
        android:background="@drawable/corners"
        app:layout_constraintBottom_toBottomOf="@id/cameraView"
        app:layout_constraintRight_toRightOf="@id/cameraView" />


    <View
        android:id="@+id/bottomRight2"
        android:layout_width="10dp"
        android:layout_height="75dp"
        android:background="@drawable/corners"
        app:layout_constraintBottom_toBottomOf="@id/bottomRight"
        app:layout_constraintRight_toRightOf="@id/bottomRight" />

    <View
        android:id="@+id/bottomLeft"
        android:layout_width="75dp"
        android:layout_height="10dp"
        android:layout_margin="15dp"
        android:background="@drawable/corners"
        app:layout_constraintBottom_toBottomOf="@id/cameraView"
        app:layout_constraintLeft_toLeftOf="@id/cameraView" />


    <View
        android:id="@+id/bottomLeft2"
        android:layout_width="10dp"
        android:layout_height="75dp"
        android:background="@drawable/corners"
        app:layout_constraintBottom_toBottomOf="@id/bottomLeft"
        app:layout_constraintLeft_toLeftOf="@id/bottomLeft" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/cameraGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="cameraView, topRight, topRight2, topLeft, topLeft2, bottomRight, bottomRight2, bottomLeft, bottomLeft2" />

    <TextView
        android:id="@+id/videoTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/step_3_nrecord_a_video_of_your_id_card_while_moving_your_phone"
        android:textAppearance="@style/TextAppearance.Subtitle1.Bold"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/cameraView"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/capturedVideoTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/do_you_want_to_proceed_with_this_video_or_recapture"
        android:textAppearance="@style/TextAppearance.Subtitle1.Bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/videoView"
        app:layout_constraintTop_toTopOf="parent" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="300dp"
        android:layout_height="478dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/recordVideoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_recording_video"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/reRecordVideoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/re_record_video"
        android:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/proceedButton" />

    <Button
        android:id="@+id/proceedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/reRecordVideoButton"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/videoGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="videoView, reRecordVideoButton, proceedButton, capturedVideoTitleTextView"/>

</androidx.constraintlayout.widget.ConstraintLayout>